--- a/vercel.json
+++ b/vercel.json
@@ -6,14 +6,14 @@
       "use": "@vercel/next"
     },
     {
-      "src": "api/src/index.ts",
+      "src": "api/src/server.ts",
       "use": "@vercel/node"
     }
   ],
   "routes": [
     {
       "src": "/api/(.*)",
-      "dest": "/api/src/index.ts"
+      "dest": "/api/src/server.ts"
     },
     {
       "src": "/(.*)",
