--- a/vercel.json
+++ b/vercel.json
@@ -13,7 +13,7 @@
   "routes": [
     {
       "src": "/api/(.*)",
-      "dest": "/api/dist/server.js"
+      "dest": "/api/src/server.ts"
     },
     {
       "src": "/(.*)",
