--- a/vercel.json
+++ b/vercel.json
@@ -2,10 +2,6 @@
   "version": 2,
   "builds": [
     {
-      "src": "frontend/package.json",
-      "use": "@vercel/next"
-    },
-    {
       "src": "api/*/**.ts",
       "use": "@vercel/node",
       "config": { "includeFiles": ["dist/**"] }
@@ -14,11 +10,7 @@
   "routes": [
     {
       "src": "/api/(.*)",
-      "dest": "/api/dist/server.js"
-    },
-    {
-      "src": "/(.*)",
-      "dest": "/frontend/$1"
+      "dest": "/api/src/server.ts"
     }
   ]
 }
