--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
+    "next": "^14.2.13",
     "resend": "^4.0.0"
   },
   "devDependencies": {
