--- a/vercel.json
+++ b/vercel.json
@@ -2,15 +2,14 @@
   "version": 2,
   "builds": [
     {
-      "src": "api/dist/server.js",
-      "use": "@vercel/node",
-      "config": { "includeFiles": ["dist/**"] }
+      "src": "api/src/server.ts",
+      "use": "@vercel/node"
     }
   ],
   "routes": [
     {
       "src": "/api/(.*)",
-      "dest": "/api/dist/server.js"
+      "dest": "/api/src/server.ts"
     }
   ]
 }
