--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,11 @@
   "version": 2,
   "builds": [
     {
-      "src": "api/*/**.ts",
+      "src": "frontend/package.json",
+      "use": "@vercel/next"
+    },
+    {
+      "src": "api/src/app.ts",
       "use": "@vercel/node"
     }
   ],
@@ -10,6 +14,10 @@
     {
       "src": "/api/(.*)",
       "dest": "/api/src/app.ts"
+    },
+    {
+      "src": "/(.*)",
+      "dest": "/frontend/$1"
     }
   ]
 }
