--- a/vercel.json
+++ b/vercel.json
@@ -6,8 +6,8 @@
       "use": "@vercel/next"
     },
     {
-      "src": "api/src/app.ts",
-      "use": "@vercel/node"
+      "src": "api/*/**.ts",
+      "use": "@vercel/ts-node"
     }
   ],
   "routes": [
