--- a/vercel.json
+++ b/vercel.json
@@ -3,7 +3,7 @@
   "builds": [
     {
       "src": "api/*/**.ts",
-      "use": "@vercel/ts-node"
+      "use": "@vercel/node"
     }
   ],
   "routes": [
