--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "dev:api": "nodemon api/src/server.ts",
     "dev:frontend": "cd frontend && npm run dev",
     "dev": "concurrently \"npm run dev:api\" \"npm run dev:frontend\"",
-    "build": "concurrently \"npm run build:api\" \"npm run build:frontend\""
+    "build": "npm run build:api && npm run build:frontend"
   },
   "dependencies": {
     "@radix-ui/react-checkbox": "^1.1.1",
