--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
   "version": 2,
   "builds": [
     {
-      "src": "dist/index.js",
+      "src": "api/package.json",
       "use": "@vercel/node",
       "config": { "includeFiles": ["dist/**"] }
     }
