--- a/api/package.json
+++ b/api/package.json
@@ -33,5 +33,9 @@
     "rimraf": "^5.0.7",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.5"
-  }
+  },
+  "pre-commit": [
+      "build",
+      "add-build"
+  ]
 }
