--- a/vercel.json
+++ b/vercel.json
@@ -4,7 +4,7 @@
     {
       "src": "api/dist/app.js",
       "use": "@vercel/node",
-      "config": { "includeFiles": ["dist/**"] }
+      "config": { "includeFiles": ["api/dist/**"] }
     }
   ],
   "routes": [
