--- a/vercel.json
+++ b/vercel.json
@@ -13,7 +13,7 @@
   ],
   "routes": [
     {
-      "src": "/api/(.*)",
+      "src": "/api/health",
       "dest": "/api/dist/app.js"
     },
     {
