--- a/vercel.json
+++ b/vercel.json
@@ -7,7 +7,7 @@
       "config": { "includeFiles": ["api/dist/**"] }
     }
   ],
-  "rewrites": [
+  "routes": [
     {
       "source": "/api",
       "destination": "/api/dist/app.js"
