--- a/vercel.json
+++ b/vercel.json
@@ -10,7 +10,7 @@
   "routes": [
     {
       "src": "/api/.*",
-      "dest": "/api/dist/app.js"
+      "dest": "/api/dist/routes/$1.js"
     }
   ]
 }
