--- a/vercel.json
+++ b/vercel.json
@@ -10,6 +10,7 @@
   "routes": [
     {
       "src": "/api/(.*)",
+      "headers": { "Location": "/$1" },
       "dest": "/api/dist/app.js"
     }
   ]
