--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
   "version": 2,
   "builds": [
     {
-      "src": "api/src/*.ts",
+      "src": "api/src/**/*.ts",
       "use": "@vercel/node"
     }
   ],
